@@ -53,9 +53,9 @@ function createAppInfo(id, name, version, platformVersion)
     name: name,
     ID: id,
     version: version,
-    appBuildID: "2007010101",
+    appBuildID: "20121202",
     platformVersion: platformVersion,
-    platformBuildID: "2007010101",
+    platformBuildID: "20121202",
     inSafeMode: false,
     logConsoleErrors: true,
     OS: "XPCShell",
