@@ -5,3 +5,4 @@ tail =
 [test_searchplugins_valid.js]
 [test_ubuntu_searchplugins.js]
 [test_locale_matchOS.js]
+[test_ubuntu_useragent.js]
