@@ -150,6 +150,9 @@ firefox-trunk (20.0~a1~hg20121121r113867-0ubuntu1) UNRELEASED; urgency=low
     - update debian/tests/reftest
     - update debian/tests/xpcshell-package-tests
     - update debian/tests/xpcshell-tests
+  * We modify the user agent, so test that it is correct
+    - add debian/testing/xpcshell-package-tests/test_ubuntu_useragent.js
+    - update debian/testing/xpcshell-package-tests/xpcshell.ini
 
  -- Chris Coulson <chris.coulson@canonical.com>  Tue, 20 Nov 2012 09:43:14 +0000
 
